--- a/emulators/wine-devel/Makefile
+++ b/emulators/wine-devel/Makefile
@@ -124,7 +124,7 @@ CONFIGURE_ARGS+=	--without-gstreamer
 PLIST_SUB+=		GSTREAMER="@comment "
 .endif
 
-.if (${LLVM_DEFAULT} == 10 || ${LLVM_DEFAULT} == 11)
+.if ${LLVM_DEFAULT} == 11
 _LLVM_VERSION=	15
 .else
 _LLVM_VERSION=	${LLVM_DEFAULT}
